fixing z-index of modal

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -2260,7 +2260,7 @@ border-bottom: 1px solid $gray-xlite;
 }
 
 .modal {
-  z-index: 1000002;
+  z-index: 1050;
   h1, h3 {
     @extend %uppercase;
   }
